@@ -3,7 +3,6 @@ package com.riccardo.shop.repository.mongo;
 import static org.assertj.core.api.Assertions.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -107,6 +106,6 @@ public class CustomerMongoRepositoryIT {
 				.map(d -> new Customer(
 						"" + d.get(CustomerMongoRepository.CUSTOMER_ID_KEY),
 						"" + d.get(CustomerMongoRepository.CUSTOMER_NAME_KEY)))
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
