@@ -3,7 +3,6 @@ package com.riccardo.shop.repository.mongo;
 import static org.assertj.core.api.Assertions.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -135,6 +134,6 @@ public class PurchaseMongoRepositoryIT {
 				.map(d -> new Purchase(
 						"" + d.get(PurchaseMongoRepository.CUSTOMER_ID_KEY),
 						"" + d.get(PurchaseMongoRepository.PRODUCT_ID_KEY)))
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
