@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.*;
 
 import java.net.InetSocketAddress;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -66,7 +65,8 @@ public class CustomerMongoRepositoryTest {
 
 	@Test
 	public void testFindAllWhenDatabaseIsEmpty() throws RepositoryException {
-		assertThat(customerRepository.findAll()).isEmpty();
+		assertThat(customerRepository.findAll())
+			.isEmpty();
 	}
 
 	@Test
@@ -74,19 +74,20 @@ public class CustomerMongoRepositoryTest {
 		addTestCustomerToDatabase(CUSTOMER_ID_1, CUSTOMER_NAME_1);
 		addTestCustomerToDatabase(CUSTOMER_ID_2, CUSTOMER_NAME_2);
 		assertThat(customerRepository.findAll())
-			.containsExactly(
+			.containsExactlyInAnyOrder(
 					new Customer(CUSTOMER_ID_1, CUSTOMER_NAME_1),
 					new Customer(CUSTOMER_ID_2, CUSTOMER_NAME_2));
 	}
 
 	@Test
-	public void testFindByIdNotFound() throws RepositoryException {
-		assertThat(customerRepository.findById(CUSTOMER_ID_1))
+	public void testFindByIdWhenCustomerDoesNotExist() throws RepositoryException {
+		addTestCustomerToDatabase(CUSTOMER_ID_1, CUSTOMER_NAME_1);
+		assertThat(customerRepository.findById(CUSTOMER_ID_2))
 			.isNull();
 	}
 
 	@Test
-	public void testFindByIdFound() throws RepositoryException {
+	public void testFindByIdWhenCustomerExists() throws RepositoryException {
 		addTestCustomerToDatabase(CUSTOMER_ID_1, CUSTOMER_NAME_1);
 		addTestCustomerToDatabase(CUSTOMER_ID_2, CUSTOMER_NAME_2);
 		assertThat(customerRepository.findById(CUSTOMER_ID_2))
@@ -94,7 +95,7 @@ public class CustomerMongoRepositoryTest {
 	}
 
 	@Test
-	public void testSave() throws RepositoryException {
+	public void testSaveWhenCustomerDoesNotAlreadyExist() throws RepositoryException {
 		Customer customer = new Customer(CUSTOMER_ID_1, CUSTOMER_NAME_1);
 		customerRepository.save(customer);
 		assertThat(readAllCustomersFromDatabase())
@@ -102,19 +103,30 @@ public class CustomerMongoRepositoryTest {
 	}
 
 	@Test
-	public void testSaveDuplicateCustomerThrowsRepositoryException() throws RepositoryException {
+	public void testSaveWhenCustomerAlreadyExistsThrowsRepositoryException() throws RepositoryException {
 		Customer customer = new Customer(CUSTOMER_ID_1, CUSTOMER_NAME_1);
+		Customer customerWithSameId = new Customer(CUSTOMER_ID_1, CUSTOMER_NAME_2);
 		customerRepository.save(customer);
-		assertThatThrownBy(() -> customerRepository.save(customer))
+		assertThatThrownBy(
+				() -> customerRepository.save(customerWithSameId))
 			.isInstanceOf(RepositoryException.class);
 	}
 
 	@Test
-	public void testDelete() throws RepositoryException {
+	public void testDeleteWhenCustomerExists() throws RepositoryException {
 		addTestCustomerToDatabase(CUSTOMER_ID_1, CUSTOMER_NAME_1);
 		customerRepository.delete(CUSTOMER_ID_1);
 		assertThat(readAllCustomersFromDatabase())
 			.isEmpty();
+	}
+
+	@Test
+	public void testDeleteWhenCustomerDoesNotExist() throws RepositoryException {
+		addTestCustomerToDatabase(CUSTOMER_ID_1, CUSTOMER_NAME_1);
+		customerRepository.delete(CUSTOMER_ID_2);
+		assertThat(readAllCustomersFromDatabase())
+			.containsExactly(
+					new Customer(CUSTOMER_ID_1, CUSTOMER_NAME_1));
 	}
 
 	private void addTestCustomerToDatabase(String id, String name) {
@@ -130,6 +142,6 @@ public class CustomerMongoRepositoryTest {
 				.map(d -> new Customer(
 						"" + d.get(CustomerMongoRepository.CUSTOMER_ID_KEY),
 						"" + d.get(CustomerMongoRepository.CUSTOMER_NAME_KEY)))
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
